<resources>
    <string name="app_name">A202SGI Calculator</string>
    <string name="title_activity_main_calculator">MainCalculator</string>
    <string name="title_activity_main_area">MainArea</string>
    <string name="title_activity_main_length">MainLength</string>
    <string name="title_activity_main_weight">MainWeight</string>
    <string name="bDot">.</string>
    <string name="bZero">0</string>
    <string name="bOne">1</string>
    <string name="bTwo">2</string>
    <string name="bThree">3</string>
    <string name="bFour">4</string>
    <string name="bFive">5</string>
    <string name="bSix">6</string>
    <string name="bSeven">7</string>
    <string name="bEight">8</string>
    <string name="bNine">9</string>
    <string name="bAddition">+</string>
    <string name="bSubtraction">-</string>
    <string name="bMultiplication">\u00d7</string>
    <string name="bDivision">\u00f7</string>
    <string name="bEqual">=</string>
    <string name="bClear">C</string>

    <string-array name="area">
        <item>Sq. Millimeter</item>
        <item>Sq. Centimeter</item>
        <item>Sq Meter</item>
        <item>Sq. Kilometer</item>
        <item>Acre</item>
        <item>Hectare</item>
    </string-array>

    <string-array name="length">
        <item>Nanometer</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inches</item>
        <item>Foot</item>
        <item>Yards</item>
        <item>Mile</item>
    </string-array>

    <string-array name="weight">
        <item>Milligrams</item>
        <item>Centigrams</item>
        <item>Decigrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Metric tonnes</item>
        <item>Pounds</item>
        <item>Ounces</item>
    </string-array>

    <string-array name="temp">
        <item>Celsius</item>
        <item>Farenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string name="title_activity_main_temperature">MainTemperature</string>

</resources>
